# =============================================================================
# pyproject.toml — OrangeCashMachine
# SSOT único de build, dependencias, herramientas y contratos de arquitectura.
# Orden de secciones: build-system → project → dependency-groups → tools →
#   [tool.importlinter] (TIER 0 → TIER 6, orden BC-NN estrictamente secuencial)
# =============================================================================

[build-system]
requires = ["hatchling>=1.16.0"]
build-backend = "hatchling.build"

# =============================================================================
# Metadata del proyecto
# =============================================================================

[project]
name            = "orangecashmachine"
version         = "0.3.0"
description     = "Pipeline profesional de ingestión, procesamiento y almacenamiento de datos de mercado cripto — arquitectura medallion (Bronze/Silver/Gold), orquestación Dagster, data lakehouse Iceberg/DuckDB, observabilidad Prometheus"
readme          = "README.md"
requires-python = ">=3.11,<3.14"
authors         = [{ name = "orangemusic" }]

keywords = [
    "trading", "algorithmic-trading", "market-data", "crypto",
    "data-pipeline", "data-lakehouse", "iceberg", "dagster",
    "ccxt", "ohlcv", "quant",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

dependencies = [
    "dagster>=1.7.0,<2.0",
    "dagster-webserver>=1.7.0,<2.0",
    # pydantic: pinneado en 2.8.2 — 2.9 introdujo breaking changes en
    # model_rebuild() con forward refs en schemas anidados (Hydra + Pydantic).
    # Desbloquear solo tras validar ocm/config/schema.py en staging completo.
    "pydantic==2.8.2",
    "pydantic-settings>=2.13.1,<3.0",
    "pandera>=0.20.0",
    "numpy>=2.0,<3.0",
    "pandas>=2.3,<3.0",
    "pyarrow>=17.0,<20.0",
    # ccxt: pinneado en 4.3.58 — versiones posteriores cambian la firma de
    # fetch_ohlcv() y el campo default_type en exchange params (CCXTAdapter).
    # Actualizar solo tras smoke test completo contra Bybit + KuCoin en staging.
    "ccxt==4.3.58",
    # loguru: pinneado en 0.7.2 — API de sink Loki acoplada a esta versión.
    # Structlog también depende del record format de loguru. Actualizar con ambos.
    "loguru==0.7.2",
    "structlog>=24.1.0,<25.0",
    "httpx>=0.27.0,<1.0",
    "prometheus-client>=0.20.0,<1.0",
    # pyyaml: pinneado en 6.0.2 — Hydra 1.3.x requiere exactamente esta API
    # de yaml.safe_load con soporte de anchors. 6.1 cambió el comportamiento
    # de merge keys (<<) que se usan en config/. Desbloquear con Hydra 2.x.
    "pyyaml==6.0.2",
    "python-dotenv>=1.0,<3.0",
    "hydra-core>=1.3.2,<2.0",
    # aioresilience: pinneado en 0.2.1 — API de CircuitBreaker no estabilizada.
    # Versiones posteriores cambian el constructor y los hooks de estado.
    # Acoplado a import-linter CI (aioresilience rompe resolución en Python 3.12
    # con deps transitivas de anyio — ver MIGRATION.md §circuit-breaker).
    "aioresilience==0.2.1",
    "aiometer>=0.10.0",
    # pybreaker: pinneado en 1.4.1 — usado como fallback sync de circuit breaker.
    # 2.x cambia la interfaz de listeners. Sincronizar con aioresilience.
    "pybreaker==1.4.1",
    "redis>=7.4.0,<8.0",
    "aiokafka>=0.11.0,<1.0",
    # pyiceberg: <1.0 — API pública no estabilizada en 1.x todavía.
    # >=0.9.1: requiere TimestampType microsecond epoch (int) en scan filters.
    # Actualizar solo tras smoke test completo en staging (iceberg_storage tests).
    "pyiceberg[pyarrow,sql-sqlite]>=0.9.1,<1.0",
    "duckdb>=1.5.1,<2.0",
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.14.0,<0.29.0",
    "python-jose[cryptography]>=3.3.0,<4.0",
    "polars[rtcompat]>=1.40.1",
    "great-expectations>=1.17.2",
]

[project.license]
text = "MIT"

[project.scripts]
ocm     = "app.cli.main:main"
ocm-api = "api.main:serve"
live    = "app.cli.live:main"
paper   = "app.cli.paper:main"

[project.urls]
Repository = "https://github.com/orangemusic/orangecashmachine"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0,<8.0",
    "sphinx-autodoc-typehints>=1.22,<2.0",
]
ci = [
    "pre-commit>=3.3,<4.0",
]

# =============================================================================
# Dependency groups (herramientas de desarrollo, no van al wheel)
# =============================================================================

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.9,<2.0",
    "ruff>=0.4,<1.0",
    "import-linter>=2.1,<3.0",
    "structlog>=24.4.0",
    "httpx>=0.28.1",
    "bandit>=1.9.4",
    "pre-commit>=3.8.0",
]

# =============================================================================
# Herramientas
# =============================================================================

[tool.pytest.ini_options]
asyncio_mode  = "auto"
testpaths     = ["tests"]
log_cli       = true
log_cli_level = "DEBUG"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E402 — module level import not at top of file.
# Solo se permite en composition roots y entrypoints conocidos.
# NO ignorar globalmente: acotar por archivo para no enmascarar imports mal ubicados.
ignore = []

[tool.ruff.lint.per-file-ignores]
# ── Composition roots y entrypoints ────────────────────────────────────────
# Lazy imports son intencionales: evitan circular imports en bootstrap order.
# Paths relativos al repo root (donde está pyproject.toml).
"infrastructure/dagster/assets/*.py"                                 = ["E402"]
"packages/market_data/infrastructure/bootstrap/container.py"        = ["E402"]
"packages/market_data/application/pipelines/ohlcv_pipeline.py"      = ["E402"]
"ocm/config/hydra_loader.py"                                         = ["E402"]
"ocm/config/loader/env_resolver.py"                                  = ["E402"]
"ocm/config/loader/yaml_loader.py"                                   = ["E402"]
"ocm/config/schema.py"                                               = ["E402"]
"ocm/observability/logger.py"                                        = ["E402"]
"ocm/observability/processors.py"                                    = ["E402"]
"ocm/observability/sinks.py"                                         = ["E402"]
"ocm/runtime/registry.py"                                            = ["E402"]
"ocm/runtime/run_config.py"                                          = ["E402"]
"ocm/runtime/state/gap_registry.py"                                  = ["E402"]
"ocm/runtime/state/lateness_calibration.py"                          = ["E402"]
"ocm/runtime/context.py"                                             = ["E402"]
"ocm/config/loader/snapshot.py"                                      = ["E402"]
"ocm/config/__init__.py"                                             = ["E402"]
"ocm/config/loader/__init__.py"                                      = ["E402"]
"ocm/config/credentials.py"                                          = ["E402"]
"ocm/config/paths.py"                                                = ["E402"]
"ocm/runtime/state/factories.py"                                     = ["E402"]
"ocm/runtime/state/adapters.py"                                      = ["E402"]
"ocm/runtime/lineage.py"                                             = ["E402"]
"ocm/observability/pushers.py"                                       = ["E402"]
"ocm/observability/config.py"                                        = ["E402"]
"ocm/observability/bootstrap.py"                                     = ["E402"]
"ocm/config/structured/pipeline.py"                                  = ["E402"]
"apps/app/cli/*.py"                                                  = ["E402"]
"infrastructure/redis/redis_stream.py"                               = ["E402"]
"packages/market_data/adapters/inbound/data_providers/*.py"          = ["E402"]
"packages/market_data/ports/outbound/observability.py"                = ["E402"]
# ── Tests — imports condicionales y fixtures con setup previo ───────────────
"tests/**/*.py"                                                      = ["E402"]

[tool.mypy]
python_version      = "3.11"
strict              = false
ignore_missing_imports = true
exclude             = ["tests/", ".venv/"]

# =============================================================================
# Build
# =============================================================================

[tool.hatch.build.targets.wheel]
packages = [
    "packages/market_data",
    "packages/trading",
    "packages/portfolio",
    "ocm",
    "infrastructure/dagster",
    "infrastructure/redis",
    "apps/api",
    "apps/app",
    "apps/research",
    "shared",                   # sin remapping — se instala desde la raíz
]

[tool.hatch.build.targets.wheel.sources]
"packages/market_data"   = "market_data"
"packages/trading"       = "trading"
"packages/portfolio"     = "portfolio"
"infrastructure/dagster" = "infrastructure/dagster"
"infrastructure/redis"   = "infrastructure/redis"
"apps/api"               = "api"
"apps/app"               = "app"
"apps/research"          = "research"
# shared: sin entrada — se instala desde la raíz directamente.

# =============================================================================
# import-linter — contratos de arquitectura (SSOT)
#
# Invocación correcta:
#   uv run python -c "from importlinter.cli import lint_imports; exit(lint_imports())"
#   import-linter 2.6 NO tiene __main__.py — NO usar python -m importlinter.
# Documentación:        https://import-linter.readthedocs.io
#
# Cada contrato tiene número único secuencial BC-NN para trazabilidad en PRs.
# Orden: TIER 0 → TIER 1 → TIER 2 → TIER 3 → TIER 4 → TIER 5 → TIER 6
# Números ausentes están documentados inline (eliminados, no olvidados).
# REGLA CI: un contrato BROKEN = merge bloqueado. Fail-fast sin excepciones.
# =============================================================================

[tool.importlinter]
exclude_type_checking  = true
include_external_packages = true
root_packages = [
    "market_data",
    "ocm",
    "trading",
    "portfolio",
    "app",
    "shared",
    "infrastructure",
    "research",
    "api",
]

# ─────────────────────────────────────────────────────────────────────────────
# TIER 0 — fundamentos: dependency-free por definición
# ─────────────────────────────────────────────────────────────────────────────


[[tool.importlinter.contracts]]
# PipelineFactory es un detalle de infraestructura — solo el Composition Root
# puede instanciarla. application/, domain/, ports/ y adapters/ dependen de
# abstracciones (OHLCVPublisherPort, etc.), no de la factory concreta.
# Ref: Seemann, «DI in .NET» §Composition Root.
name = "BC-38: PipelineFactory solo instanciable desde infrastructure/bootstrap/composition_root"
type = "forbidden"
source_modules = [
    "market_data.application",
    "market_data.domain",
    "market_data.ports",
    "market_data.adapters",
]
forbidden_modules = ["market_data.infrastructure.bootstrap.pipeline_factory"]

[[tool.importlinter.contracts]]
# shared es el kernel compartido entre todos los bounded contexts.
# Solo puede depender de stdlib y third-party.
# Un import de cualquier package interno rompe la independencia del kernel.
name = "BC-01: shared is dependency-free (stdlib + third-party only)"
type = "forbidden"
source_modules = ["shared"]
forbidden_modules = [
    "market_data", "trading", "portfolio", "ocm",
    "infrastructure", "app", "api", "research",
]

# BC-02: ELIMINADO — audit 2026-05-18.
# market_data.domain.exceptions es descendiente de market_data.domain.
# BC-03 ya prohíbe que todo market_data.domain importe ports/application/
# adapters/infrastructure — BC-02 verificaba un subconjunto redundante.
# El propio contrato documentaba: "La regla de aislamiento ya la cubre BC-03".

# ─────────────────────────────────────────────────────────────────────────────
# TIER 1 — market_data: capas internas (DIP + Clean Architecture)
# ─────────────────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# domain es el núcleo puro: cero dependencias hacia capas externas.
# Violar esto rompe DIP — el dominio no debe conocer infraestructura ni adapters.
# DEUDA TÉCNICA: domain/policies/ tiene imports ilegales (World-A, migración activa).
# Ver MIGRATION.md §world-a-to-b. Cada ignore_import debe tener issue de tracking
# antes del próximo sprint.
name = "BC-03: market_data.domain isolated from outer layers"
type = "forbidden"
source_modules = ["market_data.domain"]
forbidden_modules = [
    "market_data.infrastructure",
    "market_data.adapters",
    "market_data.application",
]
ignore_imports = []  # Verificado clean -- audit domain/ completo 2026-05-18

[[tool.importlinter.contracts]]
# ports son Protocols/ABCs puros — contratos sin implementación.
# Solo pueden depender del dominio propio. Nunca de implementaciones concretas.
# NOTA: ports/outbound/kafka_producer.py exporta constantes (TOPIC_OHLCV_RAW etc.)
# usadas desde domain/policies/. Esas constantes migran a domain/events/ en World-B.
name = "BC-04: market_data.ports depend only on domain"
type = "forbidden"
source_modules = ["market_data.ports"]
forbidden_modules = [
    "market_data.infrastructure",
    "market_data.adapters",
    "market_data.application",
]


[[tool.importlinter.contracts]]
# application orquesta use cases a través de ports — nunca instancia infra directamente.
# DEUDA TÉCNICA (World-A): composition-root fallbacks y circuit breaker cross-cutting.
# Cada ignore_import aquí es una deuda con port definido — eliminar cuando
# Dagster IOManagers cablen todo en runtime (ver MIGRATION.md §ioManagers).
name = "BC-05: market_data.application isolated from infrastructure and adapters"
type = "forbidden"
source_modules = ["market_data.application"]
forbidden_modules = [
    "market_data.adapters",
    "market_data.infrastructure",
]

[[tool.importlinter.contracts]]
# ports/inbound (primary/driving) no debe importar ports/outbound (secondary/driven).
# Los dos lados del hexágono son ortogonales — un import cruzado acoplaría
# ambos lados, eliminando la independencia de testeo de cada uno.
name = "BC-37a: ports/inbound does not import ports/outbound"
type = "forbidden"
source_modules = ["market_data.ports.inbound"]
forbidden_modules = ["market_data.ports.outbound"]

[[tool.importlinter.contracts]]
# ports/outbound (secondary/driven) no debe importar ports/inbound (primary/driving).
name = "BC-37b: ports/outbound does not import ports/inbound"
type = "forbidden"
source_modules = ["market_data.ports.outbound"]
forbidden_modules = ["market_data.ports.inbound"]


[[tool.importlinter.contracts]]
name = "BC-05: market_data.application isolated from infrastructure and adapters"
type = "forbidden"
source_modules = ["market_data.application"]
forbidden_modules = [
    "market_data.adapters",
    "market_data.infrastructure",
]

[[tool.importlinter.contracts]]
# Los adaptadores concretos implementan ports — no conocen use cases.
# Un import de application desde adapters invierte el flujo de dependencias (DIP).
name = "BC-06: market_data.adapters does not import application (no inverted dependency)"
type = "forbidden"
source_modules = ["market_data.adapters"]
forbidden_modules = ["market_data.application"]

[[tool.importlinter.contracts]]
# infrastructure NO puede importar application en nivel módulo — viola DIP.
# EXCEPCIONES DOCUMENTADAS (Composition Roots legítimos):
#   · infrastructure/dagster/assets/*.py — punto de ensamblaje por diseño.
#   · market_data.infrastructure.bootstrap.container — OCMContainer, único CR
#     interno; import lazy (dentro de build()) — no contamina el grafo en import-time.
# REGLA: ningún otro módulo de infrastructure puede importar application.
name = "BC-07: market_data.infrastructure does not import application (DIP)"
type = "forbidden"
source_modules = [
    "market_data.infrastructure",
    "infrastructure",
]
forbidden_modules = ["market_data.application"]
ignore_imports = [
    # Composition Roots — ensamblan use cases con infrastructure (intencional).
    "infrastructure.dagster.assets.bronze_ohlcv -> market_data.application",
    "infrastructure.dagster.assets.repair_ohlcv -> market_data.application",
    "infrastructure.dagster.assets.resample_ohlcv -> market_data.application",
    # Composition Root interno: OCMContainer (import lazy en método build()).
    # container → pipeline_factory es composition root legítimo (via method).
    "market_data.infrastructure.bootstrap.container -> market_data.application",
    # Composition Root: ConcretePipelineFactory instancia pipelines concretos.
    # pipeline_factory es el único punto de ensamble de application en infrastructure.
    # DEUDA TÉCNICA: mover a factories/ o composition root externo en World-B.
    "market_data.infrastructure.bootstrap.pipeline_factory -> market_data.application.pipelines.ohlcv_pipeline",
    "market_data.infrastructure.bootstrap.pipeline_factory -> market_data.application.pipelines.trades_pipeline",
    "market_data.infrastructure.bootstrap.pipeline_factory -> market_data.application.pipelines.derivatives_pipeline",
    "market_data.infrastructure.bootstrap.pipeline_factory -> market_data.application.use_cases.ohlcv_transformer",
    # Composition Root: pipeline_factory construye QualityPipeline (DIP-safe — inyección explícita).
    "market_data.infrastructure.bootstrap.pipeline_factory -> market_data.application.quality.pipeline",

]

[[tool.importlinter.contracts]]
# Las dependencias fluyen solo hacia adentro: domain es el núcleo inmutable.
# Dirección: infrastructure → adapters → application → ports → domain
#
# NOTA: pipeline_orchestrator tiene imports LAZY de CCXTAdapter (líneas 302/340/366).
# Import-linter analiza grafo estático — los imports lazy NO generan arista.
# Verificar: grep -n "from market_data.adapters" \
#   packages/market_data/application/use_cases/pipeline_orchestrator.py
name = "BC-08: market_data layer order (domain < ports < application < adapters < infrastructure)"
type = "layers"
containers = ["market_data"]
layers = [
    "infrastructure",
    "adapters",
    "application",
    "ports",
    "domain",
]
ignore_imports = [
    # Adapters que implementan ports e importan infra concreta (lazy en método).
    # Deuda técnica: migrar a ports cuando MetricsPort/StoragePort cubran todos los casos.
    "market_data.adapters.inbound.rest.trades_fetcher -> market_data.infrastructure.storage.silver.trades_storage",
    "market_data.adapters.inbound.rest.derivatives_fetcher -> market_data.infrastructure.storage.silver.derivatives_storage",
    "market_data.adapters.inbound.rest.ohlcv_fetcher -> market_data.infrastructure.observability.metrics",
    "market_data.adapters.outbound.storage.gold_reader -> market_data.infrastructure.storage.iceberg.catalog",
    "market_data.adapters.outbound.storage.iceberg_factory -> market_data.infrastructure.storage.iceberg.iceberg_storage",
    "market_data.adapters.outbound.exchange.ccxt_adapter -> market_data.infrastructure.observability.metrics",
]

[[tool.importlinter.contracts]]
# Un import de pyiceberg/redis/ccxt en domain acopla el núcleo a implementaciones
# concretas — viola DIP y hace el dominio no-testeable sin infra real.
name = "BC-09: market_data.domain does not import infrastructure third-party libs"
type = "forbidden"
source_modules = ["market_data.domain"]
forbidden_modules = [
    "pyiceberg", "redis", "ccxt", "dagster", "sqlalchemy", "boto3",
    "cryptofeed", "websockets",
]

# ─────────────────────────────────────────────────────────────────────────────
# TIER 2 — bounded contexts: independencia entre packages
# ─────────────────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# Nivel 0 (trades, order book) no depende de tipos derivados OHLCV.
# El flujo correcto de derivación es: Trades → OHLCV, nunca al revés.
# Una Candle no puede existir sin Trades — el orden es asimétrico.
# Esta regla hace ejecutable el principio arquitectónico en CI.
name = "BC-11: level-0 raw market data does not import derived OHLCV types"
type = "forbidden"
source_modules = [
    "market_data.domain.value_objects.raw_trade",
    "market_data.domain.value_objects.trade_series",
    "market_data.domain.value_objects.order_book",
    "market_data.domain.events.trade_events",
    "market_data.domain.events.orderbook_events",
    "market_data.domain.events.replay_events",
]
forbidden_modules = [
    "market_data.domain.value_objects.candle",
    "market_data.domain.value_objects.ohlcv_chunk",
    "market_data.domain.events.ingestion",
]

[[tool.importlinter.contracts]]
# market_data no puede importar bounded contexts de negocio.
# Flujo legítimo: trading/portfolio consumen market_data, nunca al revés.
# Comunicación inversa: solo por eventos de dominio (anti-corruption layer).
name = "BC-10: market_data does not import sibling bounded contexts"
type = "forbidden"
source_modules = ["market_data"]
forbidden_modules = ["trading", "portfolio"]

[[tool.importlinter.contracts]]
# strategies son pure functions sobre datos de mercado.
# No conocen ejecución ni analytics — violaría SRP y crearía acoplamiento circular.
name = "BC-36: trading.strategies isolated from execution and analytics"
type = "forbidden"
source_modules = ["trading.strategies"]
forbidden_modules = ["trading.execution", "trading.analytics"]

[[tool.importlinter.contracts]]
# risk es el guard layer previo a ejecución.
# Importar execution desde risk crea dependencia circular implícita
# (execution ya conoce risk para validar órdenes).
name = "BC-12: trading.risk isolated from execution"
type = "forbidden"
source_modules = ["trading.risk"]
forbidden_modules = ["trading.execution"]

[[tool.importlinter.contracts]]
# portfolio gestiona estado de posiciones — no orquesta ejecución ni estrategias.
# Comunicación legítima: eventos de dominio (PositionOpened, PositionClosed),
# nunca importación directa (evita acoplamiento estructural entre BCs).
name = "BC-13: portfolio isolated from trading execution and strategies"
type = "forbidden"
source_modules = ["portfolio"]
forbidden_modules = ["trading.execution", "trading.strategies"]

# ─────────────────────────────────────────────────────────────────────────────
# TIER 3 — platform (ocm): config / runtime / observability
# ─────────────────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# ocm es infraestructura de plataforma: config, runtime, observabilidad.
# No contiene lógica de negocio — importar BCs de dominio lo convierte en
# un god-package que viola SRP y hace imposible el testing aislado de la plataforma.
name = "BC-14: ocm platform has no business logic dependencies"
type = "forbidden"
source_modules = ["ocm"]
forbidden_modules = ["market_data", "trading", "portfolio"]

# ─────────────────────────────────────────────────────────────────────────────
# TIER 4 — infrastructure: orquestación dagster + redis
# ─────────────────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# infrastructure.dagster.assets puede importar market_data ports y application.
# NO puede instanciar storage ni ccxt_adapter directamente — rompe la separación
# de capas y hace los assets no-testeables sin infra real.
# NOTA: resample_ohlcv actúa como composition root (IcebergStorageFactory lazy l.84).
# Import-linter detecta la cadena transitiva — el ignore_import es intencional.
name = "BC-15: infrastructure.dagster.assets does not bypass ports layer"
type = "forbidden"
source_modules = ["infrastructure.dagster.assets"]
forbidden_modules = [
    "market_data.infrastructure.storage",
    "market_data.adapters.outbound.exchange.ccxt_adapter",
]
ignore_imports = [
    # Composition root: resample_ohlcv instancia IcebergStorageFactory (lazy).
    # Cadena transitiva: iceberg_factory → iceberg_storage (infra interna).
    "infrastructure.dagster.assets.resample_ohlcv -> market_data.adapters.outbound.storage.iceberg_factory",
    # Composition roots transitivos: Dagster resources exponen storage factory.
    "infrastructure.dagster.assets.bronze_ohlcv -> infrastructure.dagster.resources",
    "infrastructure.dagster.assets.repair_ohlcv -> infrastructure.dagster.resources",
    "infrastructure.dagster.assets.resample_ohlcv -> infrastructure.dagster.resources",
    "infrastructure.dagster.assets.asset_checks -> infrastructure.dagster.resources",
]

[[tool.importlinter.contracts]]
# infrastructure (dagster, redis) solo puede depender de ocm (plataforma)
# y de market_data (datos vía ports). No conoce lógica de negocio ni la API.
name = "BC-16: infrastructure does not couple to business bounded contexts"
type = "forbidden"
source_modules = ["infrastructure"]
forbidden_modules = ["trading", "portfolio", "app", "api"]

# BC-17: ELIMINADO en sprint-04 — contrato de infrastructure.redis aislado de dagster
# fue absorbido por BC-16 (cobertura más amplia evita duplicación, DRY).
# Referencia: PR #47 — "consolidar contratos de infrastructure layer".

# ─────────────────────────────────────────────────────────────────────────────
# TIER 5 — presentación y API
# ─────────────────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# api es la capa de presentación — el flujo de dependencias termina aquí.
# Un import de api desde cualquier capa de dominio o infraestructura invierte
# el flujo de control y acopla el dominio a detalles de HTTP/serialización.
name = "BC-18: no upward dependency to api layer"
type = "forbidden"
source_modules = [
    "ocm", "market_data", "trading", "app", "portfolio", "infrastructure",
]
forbidden_modules = ["api"]

# ─────────────────────────────────────────────────────────────────────────────
# TIER 6 — research: consumer de solo lectura (analytics post-hoc)
# ─────────────────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# research es analytics post-hoc sobre datos ya procesados (gold layer).
# Los dominios operacionales no deben saber que research existe —
# evita que el pipeline operacional se acople a lógica de análisis.
name = "BC-19: no upward dependency to research layer"
type = "forbidden"
source_modules = [
    "market_data", "trading", "portfolio", "ocm", "infrastructure",
]
forbidden_modules = ["research"]

[[tool.importlinter.contracts]]
# research consume el gold layer en modo lectura. No modifica estado operacional
# ni conoce ejecución, portfolio ni la API — es un observador puro del sistema.
name = "BC-20: research is a read-only analytics consumer"
type = "forbidden"
source_modules = ["research"]
forbidden_modules = ["trading", "portfolio", "app", "api", "infrastructure"]

# ─────────────────────────────────────────────────────────────────────────────
# TIER 3 (detalle ocm) — contratos internos de la plataforma
# ─────────────────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# ocm.config.paths es la SSOT de resolución de rutas del repo.
# SOLO hydra_loader puede importarla (lazy, bootstrap), y únicamente para
# _find_config_dir(). Importación directa desde otros módulos de ocm.config
# crea dependencia en la raíz del repo que rompe la portabilidad del config system.
#
# allow_indirect_imports = true: la cadena pipeline → hydra_loader → paths
# es intencional — hydra_loader actúa como proxy de acceso controlado.
# El contrato prohíbe importación DIRECTA desde source_modules solamente.
name = "BC-21: ocm.config bootstrap — paths es SSOT de root resolution"
type = "forbidden"
source_modules = [
    "ocm.config.pipeline",
    "ocm.config.schema",
    "ocm.config.layers",
    "ocm.config.loader",
    "ocm.config.structured",
]
forbidden_modules = ["ocm.config.paths"]
allow_indirect_imports = true

# BC-23: ELIMINADO en sprint-06 — contrato de ocm.config.structured aislado de
# ocm.config.schema fue redundante tras la unificación del schema en un único
# módulo. Absorbido por BC-21 y BC-25.
# Referencia: PR #61 — "unificar ocm.config schema y structured".

[[tool.importlinter.contracts]]
# ocm.runtime.state expone API pública solo a través de su fachada __init__.
# Los módulos internos (cursor_store, gap_store, etc.) son detalles de implementación.
# BCs externos que los importen directamente rompen la encapsulación del facade
# y quedan acoplados a la estructura interna del módulo (viola OCP).
#
# allow_indirect_imports = true: la fachada ocm.runtime.state.__init__ re-exporta
# estos módulos por diseño. Solo se prohíbe importación DIRECTA desde source_modules.
# Ref: https://import-linter.readthedocs.io/en/stable/contract_types.html
name = "BC-22: ocm.runtime.state — solo adapters/factories son API pública"
type = "forbidden"
source_modules = [
    "market_data", "trading", "app", "infrastructure",
]
forbidden_modules = [
    "ocm.runtime.state.cursor_store",
    "ocm.runtime.state.gap_store",
    "ocm.runtime.state.gap_registry",
    "ocm.runtime.state.lateness_calibration",
    "ocm.runtime.state.encoding",
    "ocm.runtime.state.retry",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
# ocm.runtime no puede importar packages de negocio ni apps.
# Es infraestructura de plataforma — debe ser agnóstico al dominio.
name = "BC-24: ocm.runtime does not import domain packages or apps"
type = "forbidden"
source_modules = ["ocm.runtime"]
# "packages" no es módulo Python — hatch remapea packages/* a sus nombres finales.
# Protegemos contra los nombres reales que el resolver ve en el grafo.
forbidden_modules = ["market_data", "trading", "portfolio", "app", "infrastructure"]

[[tool.importlinter.contracts]]
# ocm.config se inicializa antes que ocm.runtime — no puede depender de él.
# Un import de ocm.runtime desde ocm.config crea un ciclo de inicialización
# que hace imposible el bootstrap del sistema de configuración.
name = "BC-25: ocm.config does not import ocm.runtime (bootstrap order)"
type = "forbidden"
source_modules = ["ocm.config"]
forbidden_modules = ["ocm.runtime"]

[[tool.importlinter.contracts]]
# Orden de capas dentro de ocm: observability < config < runtime.
# observability es el núcleo (sin dependencias de ocm),
# config depende de observability (logging en bootstrap),
# runtime depende de config (lee configuración al arrancar).
#
# EXCEPCIÓN DOCUMENTADA: ocm.config.loader.env_resolver importa
# ocm.observability.bootstrap para emitir un warning estructurado cuando
# una variable de entorno requerida no está presente en el momento del parsing.
# Esta es la única inversión permitida — el bootstrap de logging debe preceder
# al parsing de env vars para que los errores sean observables.
# Si se añaden más ignore_imports aquí, requieren revisión arquitectónica explícita.
name = "BC-26: ocm — layering observability < config < runtime"
type = "layers"
containers = ["ocm"]
layers = [
    "runtime",
    "config",
    "observability",
]
ignore_imports = [
    # EXCEPCIÓN DOCUMENTADA: env_resolver emite warning estructurado via
    # observability.bootstrap cuando una env var requerida falta en el parsing.
    # El logging debe preceder al parsing para que los errores sean observables.
    # Cualquier adición aquí requiere revisión arquitectónica explícita.
    "ocm.config.loader.env_resolver -> ocm.observability.bootstrap",
]

[[tool.importlinter.contracts]]
# ocm.runtime.state es un sub-módulo de runtime — no puede importar del runtime
# raíz para evitar ciclos de inicialización (state se inicializa antes que context,
# guard y registry en la secuencia de bootstrap).
name = "BC-27: ocm.runtime.state does not import from ocm.runtime root (init order)"
type = "forbidden"
source_modules = ["ocm.runtime.state"]
forbidden_modules = [
    "ocm.runtime.context",
    "ocm.runtime.run_config",
    "ocm.runtime.guard",
    "ocm.runtime.guard_context",
    "ocm.runtime.lineage",
    "ocm.runtime.registry",
    "ocm.runtime.environment_validator",
]

[[tool.importlinter.contracts]]
# Los wire schemas de Kafka son contratos compartidos entre BCs — pertenecen a
# shared.kafka (SSOT), no a market_data.infrastructure.kafka.
# BCs externos que importen market_data.infrastructure.kafka.* quedan acoplados
# a detalles de implementación del productor, no al contrato del evento.
# FASE 2 de migración en curso: market_data puede seguir importando sus propios
# módulos kafka internamente hasta que shared.kafka esté completo.
# Una vez finalizada la migración: añadir "market_data" a source_modules.
name = "BC-29: kafka wire schemas must be imported from shared.kafka (not from market_data.infrastructure)"
type = "forbidden"
source_modules = [
    "trading", "portfolio", "app", "infrastructure",
]
forbidden_modules = [
    "market_data.infrastructure.kafka.payloads",
    "market_data.infrastructure.kafka.serializer",
    "market_data.infrastructure.kafka.topics",
]


# ─────────────────────────────────────────────────────────────────────────────
# TIER 1 (detalle medallion) — flujo unidireccional de storage
# ─────────────────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# Flujo medallion: bronze → silver → gold (unidireccional, append-only).
# bronze escribe datos crudos — no conoce transformaciones silver ni gold.
# silver normaliza — no conoce la capa analítica gold.
# Cada capa es independientemente testeable y deployable.
# Fail-fast: un import invertido rompe la inmutabilidad de la cadena de custodia.
name = "BC-30: medallion storage — unidirectional bronze → silver → gold"
type = "layers"
containers = ["market_data.infrastructure.storage"]
layers = [
    "gold",
    "silver",
    "bronze",
    "iceberg",
]
[[tool.importlinter.contracts]]
# shared.kafka son los wire schemas SSOT de eventos Kafka entre BCs.
# No puede importar market_data.infrastructure.kafka (implementación concreta)
# porque eso invertiría la dependencia: el contrato dependería de la implementación.
# SSOT: shared.kafka define el contrato; market_data.infrastructure.kafka lo implementa.
name = "BC-32: shared.kafka does not import market_data infrastructure (SSOT direction)"
type = "forbidden"
source_modules = ["shared.kafka"]
forbidden_modules = [
    "market_data.infrastructure.kafka",
    "market_data.infrastructure.storage",
]

# ─────────────────────────────────────────────────────────────────────────────
# TIER 2 (detalle shared) — contratos de neutralidad del bus Kafka
# ─────────────────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# shared.kafka.schemas son wire contracts del bus — el ACL explícito entre BCs.
# No son objetos de dominio de ningún BC concreto.
#
# Regla de oro: shared.kafka.schemas solo puede importar desde:
#   · shared.kafka.schemas._base  (BasePayload — mecanismo)
#   · stdlib (dataclasses, typing, json, uuid, datetime)
#
# NO puede importar desde shared.types (value objects de dominio),
# ni desde ningún BC (market_data, trading, portfolio, app).
# Si un schema necesita un tipo de dominio, ese tipo debe definirse
# localmente en el schema o en shared.kafka.schemas._base.
#
# Violación típica: from shared.types.signal import SignalType en signals.py
# Fix: definir SignalDirection directamente en el schema (ya es el caso actual).
name = "BC-33: shared.kafka.schemas isolated from domain types and bounded contexts"
type = "forbidden"
source_modules = ["shared.kafka.schemas"]
forbidden_modules = [
    "shared.types",
    "market_data",
    "trading",
    "portfolio",
    "app",
    "infrastructure",
    "ocm",
]

[[tool.importlinter.contracts]]
# shared/ es tooling neutro — no puede importar lógica de negocio de ningún BC.
# shared.types contiene value objects compartidos (Signal, Timeframe, Order*).
# Estos value objects son contratos de datos, no implementaciones de dominio.
# Si shared.types necesita importar de un BC, el value object pertenece al BC.
#
# shared.kafka.schemas queda cubierto por BC-33 (más específico).
# Este contrato cubre el resto de shared: types, utils, contracts, exceptions.
#
# EXCEPCIÓN PREVISTA (no existe aún): si shared/types/ crece y necesita
# tipos de market_data, esos tipos deben migrar a domain/value_objects/ de
# market_data y eliminarse de shared/. Añadir ignore_import con issue de tracking.
name = "BC-34: shared is neutral tooling — does not import bounded context implementations"
type = "forbidden"
source_modules = ["shared"]
forbidden_modules = [
    "market_data.application",
    "market_data.infrastructure",
    "market_data.adapters",
    "trading.execution",
    "trading.strategies",
    "trading.risk",
    "trading.analytics",
    "portfolio.services",
    "portfolio.infra",
    "infrastructure",
    "ocm.runtime",
]

[[tool.importlinter.contracts]]
# Los BCs no definen sus propios wire payloads Kafka — los importan de shared.kafka.
# Esto previene duplicación del wire format (dos definiciones de EventPayload
# divergen silenciosamente y producen deserialización incorrecta en producción).
#
# Regla: si trading/ necesita publicar o consumir un evento Kafka, el payload
# debe vivir en shared.kafka.schemas.* — nunca en trading/infrastructure/kafka/.
#
# Condición de eliminación: cuando cada BC tenga su propio deploy independiente
# con schema registry dedicado. Hasta entonces, shared.kafka.schemas es el SSOT.
#
# NOTA: market_data.infrastructure.kafka.* son IMPLEMENTACIONES del productor,
# no definiciones de wire format. No confundir con los schemas de shared.kafka.
# Los shims de compatibilidad (payloads.py, serializer.py) quedan excluidos
# porque son re-exports de shared — no duplican, re-exponen.
name = "BC-35: bounded contexts do not define their own Kafka wire payloads (no duplication)"
type = "forbidden"
source_modules = [
    "trading",
    "portfolio",
    "app",
]
forbidden_modules = [
    # Los BCs no pueden importar _base directamente para extender BasePayload
    # fuera de shared.kafka.schemas. Si aparece, el payload debe moverse a shared.
    # Importación directa: from shared.kafka.schemas._base import BasePayload
    # en módulos de trading/ o portfolio/ → violación.
    #
    # allow_indirect_imports = true: la cadena transitiva legítima es:
    #   app → market_data → infrastructure.kafka → shared.kafka.schemas → _base
    # Esa cadena es uso del bus (correcto), no extensión de BasePayload (incorrecto).
    # Solo se prohíbe el import DIRECTO de _base desde los BCs.
    "shared.kafka.schemas._base",
]
allow_indirect_imports = true

# ---------------------------------------------------------------------------
# mypy overrides — librerías sin py.typed
# ---------------------------------------------------------------------------
# pyiceberg no incluye py.typed ni stubs oficiales.
# ignore_missing_imports = true (global) ya suprime ImportMissingStubs,
# pero ignore_errors = true aquí previene errores de tipo transitivos
# que pyiceberg puede filtrar hacia nuestro código cuando mypy sigue
# los imports a través de sus módulos internos.
[[tool.mypy.overrides]]
module        = ["pyiceberg.*"]
ignore_errors = true
